--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,13 +6,13 @@
 <app-menu-title></app-menu-title>
 <div class="container__articles">
     <div class="articles__main">
-        <app-big-card></app-big-card>
+        <app-big-card cardDescription="Este projeto foi feito com Angular." cardTitle="Javascript" photoCover="https://1000logos.net/wp-content/uploads/2020/09/JavaScript-Logo.png"></app-big-card>
     </div>
     <div class="articles__others">
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
+        <app-small-card photoCover="https://images.vexels.com/media/users/3/166383/isolated/lists/6024bc5746d7436c727825dc4fc23c22-icone-de-linguagem-de-programacao-html.png" cardTitle="HTML5"></app-small-card>
+        <app-small-card photoCover="https://cdn-icons-png.flaticon.com/512/919/919826.png" cardTitle="CSS"></app-small-card>
 
-        <app-small-card></app-small-card>
+        <app-small-card photoCover="https://miro.medium.com/max/480/1*VKY-Ldkt-iHobItql7G_5w.png" cardTitle="Angular"></app-small-card>
 
     </div>
 
